# vdo-ops

./: .gitignore  .sops.yaml  LICENSE.txt  README.md  deploy.sh  environments.yml  pyproject.toml
.circleci/: config.yml
sam/: api.yaml  lambdalayer.yaml  main.yaml  managers.yaml  samconfig.toml
scripts/: bootstrap-terraform  dependencies.sh  terraform
services/common/: tox.ini
services/common/src/: azure_clients.py  client_cacher.py  clients.py  config.py  constants.py  encore.py  exceptions.py  identity.py  janus.py  requests.py  requirements.txt  timestr.py  util.py  vsphere_api_clients.py
services/common/src/metrics/: __init__.py  v1.py
services/common/src/tokens/: __init__.py  v1.py
services/network-copy/: dev-requirements.txt  main.tf  terraform.tfvars  tox.ini
services/network-copy/src/: network_copy.py  requirements.txt
services/network-copy/test/: test_network_copy.py
util/: .doit.db  build_tools.py  create_sam_sfns.py  create_secrets.py  dev_tools.py  gate_tests.py  upload_sam_sfns.py
vdo-ops/_vault/: dev.secrets.yaml  prod.secrets.yaml
vdo-ops/common/: log.py
vdo-ops/common/clients/: vdo_goss.py
vdo-ops/managers/network-copy/: common
vdo_ops/_vault/: license.secrets.yaml
vdo_ops/api/: .env.dev  .env.prod
vdo_ops/api/controllers/: host.py  job.py
vdo_ops/api/schemas/: common.py  error.py  header.py  host.py  job.py
vdo_ops/api/schemas/marshmallow/: custom.py
vdo_ops/api/server/: handlers.py  rebar.py
vdo_ops/api_authorizer/: authorizer.py
vdo_ops/common/: constants.py  rackspace.py  secret_manager.py  secrets.py  vcenter.py  vsphere_api.py
vdo_ops/common/clients/: boto.py  cms.py  identity.py  vcloud.py  vm_extended.py  vmware.py  vsphere.py  zamboni.py
vdo_ops/common/utils/: rpcv_sfn.py  util.py
vdo_ops/managers/network_copy/: network_copy.py
vdo_ops/tests/: conftest.py
vdo_ops/tests/common_tests/: test_secret_manager.py  test_secrets.py  test_vsphere_api.py
vdo_ops/tests/common_tests/clients_tests/: test_boto.py  test_vsphere.py  test_zamboni.py
vdo_ops/tests/common_tests/utils_tests/: test_util.py
vdo_ops/tests/data/zamboni/: get_host_system.json  get_host_system_2.json  get_vm_list.json  modified_vm_list.json
vdo_ops/tests/func_tests/utils_tests/: test_func_utils.py
vdo_ops/tests/helper/: util.py
vdo_ops/tests/manager_tests/: test_network_copy.py
